--- a/_data/2022/delhi/faculty.yml
+++ b/_data/2022/delhi/faculty.yml
@@ -4,7 +4,7 @@
   website: https://csbc.org.in/team.php
   
 - name: Rishemjit Kaur
-  bio: Principal Scientist, CSIR-Central Scientific Instruments Organization, Chandigarh, India
+  bio: Dr. Rishemjit Kaur is working as a Principal Scientist at CSIR-Central Scientific Instruments Organisation, India and as an Associate Professor at the Academy of Scientific and Innovative Research. Her research interests include modeling and prediction of collective behaviours using machine learning, and NLP and leveraging it for solving engineering problems. Her work involves tailoring NLP techniques to a variety of languages, integrating a different sources of information, etc. She is currently working on developing NLP techniques for linking local cuisines and nutrition databases. She holds a PhD degree on collective intelligence and optimisation techniques. She was also a  Japanese Govt. MEXT scholar at Nagoya University, Japan.   
   image: /assets/images/rishemjit_kaur.png
   website: https://scholar.google.com/citations?user=GH809NUAAAAJ&hl=en&oi=ao
  
@@ -16,12 +16,12 @@
 - name: Ritesh Kumar
   bio: Ritesh Kumar is  Principal Scientist with CSIR-Central Scientific Instrumentation Organisation, Chandigarh, India . He is also a Royal Society-Newton Fellow at University of Hertfordshire, UK. He has worked extensively on crowd-sourcing and deriving meaningful conclusions using the  data gathered from noisy and varied sources. His  prime research  interests  and projects revolve around three categories- Crowd-sourcing the smell loss using smell-kits and home tests, Understanding Chemical space of odorants using machine learning and Designing optimisation algorithms for Odor Source Localisation. He has published more than 35 papers in reputed journals like Science, Nature Scientific Reports, PloS One, Nature communications and, IEEE transaction on Cybernetics. He has worked on various govt and industry sponsored projects and consulted some exciting startups like Rymo Technologies, FoodPairing NV etc.. He has also worked with companies like TATA consumer Products Ltd. in order to provide scientific consultancies in the area of modelling taste and smell.  
 
-  image: /assets/images/ritesh_kumar.jpg
+  image: /assets/images/ritesh_kumar.png
   website: https://scholar.google.com/citations?user=ls5bkwsAAAAJ&hl=en
    
 - name: Maneet Singh
   bio: Maneet Singh is a PhD Scholar in Computer Science and Engineering at the Indian Institute of Technology Ropar, India. He has more than six years of teaching experience in reputed universities/institutes. His research interests include opinion mining, social network analysis, computational social science and machine learning. His PhD thesis focuses on understanding different aspects of public opinion and developing models of opinion dynamics to study various social phenomena. 
-  image: /assets/images/maneet_singh.jpg
+  image: /assets/images/maneet_singh.png
   website: https://scholar.google.com/citations?user=Sk1KBpoAAAAJ&hl=en
   
 - name: Tirtha Patel
