--- a/_data/2022/paris/schedule.yml
+++ b/_data/2022/paris/schedule.yml
@@ -47,7 +47,7 @@ Broadcasts, 2002-2020"
 - date: 2022-06-24
   name: Natural Language Processing
   events:
-    - name: "09:30 - 12:00 Lecture ([Étienne Ollion](www.ollion.cnrs.fr))"
+    - name: "09:30 - 12:00 Lecture ([Germain Gauthier](https://pinchofdata.github.io/germaingauthier/))"
     - name: "12:00 - 14:00 Lunch Break"
     - name: "14:00 - 16:30 Group Exercise ([Felix Lennert](https://felix-lennert.netlify.app) and [Germain Gauthier](https://pinchofdata.github.io/germaingauthier/))"
     - name: "16:30 - 17:00 Coffee Break"
