--- a/_data/2022/delhi/faculty.yml
+++ b/_data/2022/delhi/faculty.yml
@@ -16,7 +16,7 @@
 - name: Ritesh Kumar
   bio: Ritesh Kumar is  Principal Scientist with CSIR-Central Scientific Instrumentation Organisation, Chandigarh, India . He is also a Royal Society-Newton Fellow at University of Hertfordshire, UK. He has worked extensively on crowd-sourcing and deriving meaningful conclusions using the  data gathered from noisy and varied sources. His  prime research  interests  and projects revolve around three categories- Crowd-sourcing the smell loss using smell-kits and home tests, Understanding Chemical space of odorants using machine learning and Designing optimisation algorithms for Odor Source Localisation. He has published more than 35 papers in reputed journals like Science, Nature Scientific Reports, PloS One, Nature communications and, IEEE transaction on Cybernetics. He has worked on various govt and industry sponsored projects and consulted some exciting startups like Rymo Technologies, FoodPairing NV etc.. He has also worked with companies like TATA consumer Products Ltd. in order to provide scientific consultancies in the area of modelling taste and smell.  
 
-  image: /assets/images/ritesh_kumar.png
+  image: /assets/images/ritesh_kumar.jpg
   website: https://scholar.google.com/citations?user=ls5bkwsAAAAJ&hl=en
    
 - name: Maneet Singh
