Updated participants details

--- a/_data/2022/delhi/participants.yml
+++ b/_data/2022/delhi/participants.yml
@@ -58,12 +58,12 @@
   
 - name: "Ashwin Ramaswamy"
   image: /assets/images/delhi_AshwinRamaswamy.jpeg
-  bio: "Anurag Verma is a freelance educator and independent researcher with a range of interests. I am currently working on projects related to Indian public opinion and Agent-Based modeling of political polarization. My other major interest is the role of motivation and emotional states in learning. I am also curious about the potential of computational methods such as Agent-Based Modeling to inform and improve pedagogy in the classroom."
+  bio: "Ashwin Ramaswamy is a freelance educator and independent researcher with a range of interests. He is currently working on projects related to Indian public opinion and Agent-Based modeling of political polarization. My other major interest is the role of motivation and emotional states in learning. He is also curious about the potential of computational methods such as Agent-Based Modeling to inform and improve pedagogy in the classroom."
   
   
 - name: "Bijoyetri Samaddar"
   image: /assets/images/delhi_BijoyetriS.jpg
-  bio: "Anurag Verma is a freelance educator and independent researcher with a range of interests. I am currently working on projects related to Indian public opinion and Agent-Based modeling of political polarization. My other major interest is the role of motivation and emotional states in learning. I am also curious about the potential of computational methods such as Agent-Based Modeling to inform and improve pedagogy in the classroom."
+  bio: "Bijoyetri Samaddar is a Senior Associate (Research) at the Centre for Social and Behaviour Change (Ashoka University). Her research interests lie in gender, social policy and quantitative methods. She holds a MA in Women’s Studies from Tata Institute of Social Sciences, Mumbai (India)."
   website: https://twitter.com/Bijoyetri4
    
 - name: "Nivedita Roy"
