Updated speakers details

--- a/_data/2022/delhi/speakers.yml
+++ b/_data/2022/delhi/speakers.yml
@@ -19,7 +19,7 @@
   website: https://x.ashoka.edu.in/behavioural-science/
   
 - name: Nicolo Cavalli
-  bio: Nicolo Cavalli is an Assistant Professor at the Department of Social and Political Sciences. I teach Applications for Management and Computational Social Science. He holds a MSc in Economic and Social Sciences from Bocconi University and a BA in Political Sciences from the University of Bologna. During this time, I was a visiting student at Sciences Po Paris and at the London School of Economics. I conducted my doctoral studies in Sociology at Nuffield College, University of Oxford and was a visiting researcher at the Institute for Quantitative Social Science at Harvard University. His research area includes social and political attitudes, intergroup attitudes, technological and demographic change, and research methods for the digital society.
+  bio: Nicolo Cavalli is an Assistant Professor at the Department of Social and Political Sciences. He teaches Applications for Management and Computational Social Science. He holds an MSc in Economic and Social Sciences from Bocconi University and a BA in Political Sciences from the University of Bologna. During this time, He was a visiting student at Sciences Po Paris and the London School of Economics. He conducted his doctoral studies in Sociology at Nuffield College, University of Oxford, and was a visiting researcher at the Institute for Quantitative Social Science at Harvard University. His research area includes social and political attitudes, intergroup attitudes, technological and demographic change, and research methods for the digital society.
   image: /assets/images/nicolo_cavalli.jpg
   website: https://didattica.unibocconi.eu/docenti/cv.php?rif=180020
   
