--- a/_data/2022/duke/schedule.yml
+++ b/_data/2022/duke/schedule.yml
@@ -51,10 +51,12 @@
   name: Experiments in the Digital Era
   events:
     - name: "9:00 - 9:15 Check In"
-    - name: "9:15 - 11:00 Lisa Argyle (Brigham Young University)"
-    - name: "11:00 - 11:15 Coffee Break"
-    - name: "11:15 - 12:00 Lisa Argyle continued"
-    - name: "12:00 - 1:00 Lunch"
+    - name: "9:15 - 10:30 Lisa Argyle (Brigham Young University): Computational Advances in Social Science Experiments"
+    - name: "10:30 - 10:45 Coffee Break"
+    - name: "10:45 - 11:15 Chris Bail (Duke University): Behind the Bot Study"
+    - name: "11:15 - 11:30 Coffee Break"
+    - name: "11:30 - 12:00 Lisa Argyle: Experimental Possibilities of Generative Language Models"
+    - name: "12:00 - 1:00 Lunch and Guest Lecture: Daniel Argyle, Natural Language Processing"
     - name: "1:00 - 2:30 Group Exercises"
     - name: "2:30 - 3:00 Break"
     - name: "3:00 - 4:30 Group Exercises"
