add rutgers speaker

--- a/_data/2022/rutgers/speakers.yml
+++ b/_data/2022/rutgers/speakers.yml
@@ -12,6 +12,11 @@
   bio: "Assistant Professor of Psychology at Rutgers University."
   website: https://www.thehamiltonlab.org/lab-director
 
+- name: Robert Kubinec
+  image: /assets/images/kubinecRobert.jpeg
+  bio: "Assistant Professor of Political Science at New York University Abu Dhabi"
+  website: https://www.robertkubinec.com/
+
 - name: Tamar Mitts
   image: /assets/images/TamarMitts.png
   bio: "Assistant Professor at the School of International and Public Affairs and a Faculty Member at the Data Science Institute and the Saltzman Institute of War and Peace Studies at Columbia University."
