--- a/_data/2022/covenant-university/participants.yml
+++ b/_data/2022/covenant-university/participants.yml
@@ -22,6 +22,9 @@
   image: /assets/images/
   bio: "<p align='justify'>Michael Ehinmowo is a master's student in the department of psychology at the University of Ibadan. His current research interest is at the nexus of mental health, collective behaviour, bioethics, and social policy. He is interested in employing emerging tools of computation in science.</p>"
   
+- name: Oluwaseyi Olopade
+  image: /assets/images/
+  bio: "<p align='justify'>Oluwaseyi Olopade is an early career researcher and a recent graduate of Financial Economics at the University of Johannesburg. Oluwaseyi’s current research aims to address the impact of out-of-pocket health expenditure and the state of well-being in Nigerian households. She holds an Honours Bachelor’s degree in Econometrics from the University of Johannesburg, and an undergraduate degree from Ajayi Crowther University.</p>"
   
 - name: Marvellous Ngundu
   image: /assets/images/MNgundu.jpg
