--- a/_data/2022/sydney/schedule.yml
+++ b/_data/2022/sydney/schedule.yml
@@ -73,7 +73,8 @@
     - name: "**13:00-14:00** Lunch break"
     - name: "**14:00-16:00** Workshop: mapping the key themes and participating institutions"
     - name: "**16:00-16:30** Closing remarks"
-    - name: "**17:00-18:00** The Science of Success (Australian premiere, documentary screening and discussion with Australian director Annamaria Talas"
+    - name: "**17:00-18:00** The Science of Success (Australian premiere, documentary screening and discussion with Australian director Annamaria Talas
+    <br/> This showing will take place at the University of Sydney campus. It is open to the public, register [here](https://www.eventbrite.com.au/e/354487871767)"
  
 - date: 2022-06-29
   name: "Specific Applications Part 1: Studying Content and Dynamics"
