--- a/_data/2022/sydney/schedule.yml
+++ b/_data/2022/sydney/schedule.yml
@@ -105,5 +105,6 @@
     - name: "**09:30-10:00** Coffee/tea"
     - name: "**10:00-12:30** Project work"
     - name: "**12:30-13:00** Lunch break"
-    - name: "**13:00-14:30** SSSHARC Tank - group projects final presentations"
+    - name: "**13:00-14:30** SSSHARC Tank - group projects final presentations
+    <br/> *Lee Wallace, Eduardo Altmann, Tristram Alexander, Jonathon Hutchinson*"
     - name: "**14:30-15:30** Closing session"
