--- a/_data/2022/ndsu/participants.yml
+++ b/_data/2022/ndsu/participants.yml
@@ -27,6 +27,11 @@
   image: /assets/images/yumingfang.png
   bio: "Yuming Fang is a third-year PhD student in the Hubbard School of Journalism and Mass Communication at the University of Minnesota. Her research interests are in health communication, specifically examining how individuals respond to health misinformation and misinformation correction interventions."
   website: https://twitter.com/yuming_fang/
+  
+- name: Emily Galbraith
+  image: /assets/images/EGalbraith_photo.jpg
+  bio: "Emily Galbraith is a second-year master's student in Sociology at North Dakota State University. Her research interests lie global development, human rights, and political change. She also aims to make data accessible, and foster ethical, meaningful engagement with social data."
+  website: https://www.ndsu.edu/socanth/people/current_graduate_students/
 
 - name: Tzu-Hsin Huang
   image: /assets/images/HuangTH.jpeg
