--- a/_data/2022/sydney/schedule.yml
+++ b/_data/2022/sydney/schedule.yml
@@ -23,7 +23,7 @@
     - name: "**13:00-14:00** Research data management
     <br/> *Simon Musgrave, Ben Foley, Sam Hames*
     <br/> This workshop is open to the public, register [here](https://www.eventbrite.com.au/e/354428123057)"
-    - name: "**14:00-16:00** Collecting digital trace data (group exercise <br/> *Tristram Alexander*"
+    - name: "**14:00-16:00** Collecting digital trace data (group exercise) <br/> *Tristram Alexander*"
     - name: "**16:00-17:00** Participant lightning talks (part 2)"
 
 - date: 2022-06-22
