--- a/_data/2022/howard-mathematica/schedule.yml
+++ b/_data/2022/howard-mathematica/schedule.yml
@@ -250,7 +250,7 @@
         
         - [Erin D. Foster, Service Lead, Campus-Wide Research Data Management Program, UC Berkeley](https://researchdata.berkeley.edu/people/erin-foster)  
         
-        - [Chris Hoffman, Director, Campus-Wide Research Data Management Program. UC Berkeley](https://research-it.berkeley.edu/chris-hoffman)
+        - [Chris Hoffman, Associate Director, Research IT, UC Berkeley](https://research-it.berkeley.edu/chris-hoffman)
         
         - [Anna Sackmann, Science Data & Engineering Librarian, UC Berkeley](https://researchdata.berkeley.edu/people/anna-sackmann)"
         
