--- a/_data/2022/delhi/schedule.yml
+++ b/_data/2022/delhi/schedule.yml
@@ -1,9 +1,8 @@
 - date: All times are in Indian Standard Time (IST)
 
 - date: 2022-06-13
-  name: Experimental
   events:
-    - name: "10:00-11:30 Meet and Greet (Dr. Pavan Mamidi, Organizers and Participants)"
+    - name: "10:00-11:30 Meet and Greet"
     - name: "11:30-1:00 Designing Experiments by Dr. Sharon Barnhardt"
     - name: "1:00-2:00 Lunch Break "
     - name: "2:00-3:30 Analysing Experiments by Dr. Sneha Shashidhara"
@@ -12,7 +11,6 @@
     - name: "7:00 to 8:00 Keynote by Dr. James Evans"
 
 - date: 2022-06-14
-  name: Computational
   events:
     - name: "10:00-11:30 Crowdsourcing and Open Science: Case of the Global Chemosensory Research (GCCR) by Dr. Valentina Parma"
     - name: "11:30-1:00 Causal Inference by Dr. Subhashis Banerjee"
@@ -21,7 +19,6 @@
     - name: "3:30-5:00 Applications of AL/ML in Policy by Dr. Madhavi Devaraj"
     
 - date: 2022-06-15
-  name: Computational
   events:
     - name: "10:00-11:30 Web Scraping: Wikipedia and Stack Exchange by Dr. Sudarshan Iyengar"
     - name: "11:30-1:00 Web Scraping: Wikipedia and Stack Exchange by Dr. Sudarshan Iyengar"
@@ -29,7 +26,6 @@
     - name: "2:00-3:30 Group Exercise by Dr. Sudarshan Iyengar"
     - name: "3:30-5:00 Group Exercise by Dr. Sudarshan Iyengar"
 - date: 2022-06-16
-  name: Computational
   events:
     - name: "10:00-11:30 Online Echo Chamber: What Is It and How to Break Out of it by Dr. Sasahara Kazutoshi"
     - name: "11:30-1:00 Agent-based Modeling by Dr. Narges Hajimoladarvish"
@@ -38,11 +34,10 @@
     - name: "3:30-5:00 Computational Text Analysis by Dr. Ritesh Kumar / Dr. Rishemjit Kaur"
     
 - date: 2022-06-17
-  name: Group Project
   events:
     - name: "10:00-11:30 Computational Text Analysis by Dr. Ritesh Kumar / Dr. Rishemjit Kaur"
     - name: "11:30-1:00 Work on Group Projects by Participants"
     - name: "1:00-2:00 Lunch Break"
     - name: "2:00-3:30 Work on Group Project by Participants"
     - name: "3:30-5:00 Presentation of Group Projects by Participants"
-    - name: "5:00-7:00 Closing Remarks by Organizers"
+    - name: "5:00-7:00 Closing Remarks"
