--- a/_data/2022/sydney/teaching_assistants.yml
+++ b/_data/2022/sydney/teaching_assistants.yml
@@ -1,5 +1,5 @@
 - name: Justin Miller
-  image: /assets/images/Justin_Miller.png
+  image: /assets/images/Justin_Miller.jpg
   bio: "Justin Miller is a PhD student at the University of Sydney. His area of interest is in natural language programming and its applications to social media. He has a Master of Data Science from Western Sydney University and has worked as a data scientist within the legal industry"
 
 - name: Jen Grinham
