--- a/_data/2022/edinburgh/participants.yml
+++ b/_data/2022/edinburgh/participants.yml
@@ -44,7 +44,7 @@
     interests focus on the intersection of computer science, psychology and linguistics.
     In particular, she wants to use machine learning and NLP tools to study cognition
     and language usage.
-  website: .na.character
+  website: 
 - name: Alexander Wuttke
   image: /assets/images/1ig_hHPiaEvGVgUElgt0u_y_TJrnDImJt.jpg
   bio: Alexander is a Postdoctoral Research Fellow at the University of Mannheim.
@@ -62,7 +62,7 @@
     Policy from the University of Edinburgh and a BSc in Biotechnology from Universidad
     Politecnica of Madrid. Before beginning her PhD, she worked on public health emergency
     response for the World Health Organisation.
-  website: .na.character
+  website: 
 - name: Arpita Tripathi
   image: /assets/images/1-hzgC0pyuHNHGaRFwVIg3nWOGImJSYuu.jpeg
   bio: Arpita Tripathi is a first year PhD student at the School of Public Health,
@@ -81,7 +81,7 @@
     perceptions).
   website: https://www.linkedin.com/in/katharina-baum-27a348143
 - name: Nicolette Dakin
-  image: .na.character
+  image:
   bio: Nicolette is PhD student in Critical Social/Personality and Environmental Psychology
     at the Graduate Center of CUNY. She also holds a Master's in Social Work from
     NYU. Her research interests are focused on the roles of ideology, social identity,
@@ -177,7 +177,7 @@
     media accounts discuss Covid-19 during the pandemic. Her research interests include
     qualitative studies on social media, cross-platform studies, and digital methods.
     Before entering Sociology, she held both her BA and MA in journalism.
-  website: .na.character
+  website:
 - name: Aleksander Bielinski
   image: /assets/images/1sEi1M8EEZzLL8ITzWdouvcyb9umupXH_.jpg
   bio: Aleksander Bielinski is PhD researcher at Edinburgh Napier University. In his
