--- a/_data/2022/edinburgh/schedule.yml
+++ b/_data/2022/edinburgh/schedule.yml
@@ -1,3 +1,84 @@
-- date: June 13, 2022
+- date: 2022-06-13
+  name: Ethics, Reproducibility, and Data Collection
   events:
-    - name: "Schedule coming soon..."
+    - name: "09:00 - 11:00 Welcome and introductions"
+    - name: "11:00 - 13:00 Intro. data collection and ethics"
+    - name: "12:00 - 13:00 Lunch Break"
+    - name: "14:00 - 16:00 APIs and web scraping"
+    - name: "16:00 - 18:00 Research talk: Carolina Scarton"    
+    
+- date: 2022-06-14
+  name: Computational Social Science and Digital Research Methods
+  events:
+    - name: "10:00 - 13:00 "
+    - name: "12:00 - 13:00 Lunch Break"
+    - name: "14:00 - 16:00 "       
+    - name: "16:00 - 18:00 Research talk: Anita Gohdes"
+
+- date: 2022-06-15
+  name: Networks
+  events:
+    - name: "10:00 - 13:00 "
+    - name: "12:00 - 13:00 Lunch Break"
+    - name: "14:00 - 16:00 "       
+    - name: "16:00 - 18:00 Research talk: Maria Wolters"
+
+- date: 2022-06-16
+  name: Computational Text Analysis and NLP
+  events:
+    - name: "10:00 - 12:00 Intro. CTA"
+    - name: "12:00 - 13:00 ILCC Poster Session"
+    - name: "14:00 - 16:00 NLP"       
+    - name: "16:00 - 18:00 Research talk: Clare Llewellyn"
+
+- date: 2022-06-17
+  name: Machine learning and prediction
+  events:
+    - name: "10:00 - 13:00"
+    - name: "12:00 - 13:00 Lunch Break"
+    - name: "14:00 - 16:00"       
+    - name: "16:00 - 18:00 Research talk: Benjamin Bach"
+    
+
+- date: 2022-06-18
+  name: Weekend day off
+  
+- date: 2022-06-19
+  name: Weekend day off
+  
+- date: 2022-06-20
+  name: Group work
+  events:
+    - name: "10:00 - 16:00 Group work"
+    - name: "16:00 - 18:00 Research talk: Jonathan Gray"
+    - name: "18:00 - 19:00 CDCS Event"
+
+- date: 2022-06-21
+  name: Group work
+  events:
+    - name: "10:00 - 16:00 Group work"
+    - name: "16:00 - 18:00 Research talk: Arun Frey"
+    
+- date: 2022-06-22
+  name: Group work
+  events:
+    - name: "10:00 - 18:00 Group work"
+    
+- date: 2022-06-23
+  name: Group work
+  events:
+    - name: "10:00 - 18:00 Group work"
+    
+ - date: 2022-06-24
+  name: Final day
+  events:
+    - name: "10:00 - 12:00 Group work"
+    
+ - date: 2022-06-24
+  name: Final day
+  events:
+    - name: "10:00 - 12:00 Group work"
+    - name: "12:00 - 13:00 Presentations"
+    - name: "13:00 - 14:00 Lunch"
+    - name: "14:00 - 17:00 Presentations"    
+    - name: "19:00 - 21:00 Final dinner"    
