--- a/_data/2022/edinburgh/participants.yml
+++ b/_data/2022/edinburgh/participants.yml
@@ -6,6 +6,7 @@
     he conducted interviews, digitized previously untapped archival sources for quantitative
     analysis, and collected Twitter data.
   website: https://www.polis.cam.ac.uk/staff/bruno-schmidt-feuerheerd
+  
 - name: Joseph Van Matre
   image: /assets/images/1JaWlu3ScZ15cwT-Aw168_zCj2dM94iRv.jpg
   bio: Joseph Van Matre is a doctoral candidate at Vrije Universiteit Amsterdam’s
@@ -15,6 +16,7 @@
     of California Office of the President. He holds an MA in Economics from Vanderbilt
     University and a BS in International Business from the University of Arkansas.
   website: https://www.jcvanmatre.com/
+  
 - name: Sarah Jewett
   image: /assets/images/16tgdAGl7nxdVwG8KG6pXJe6iw9BxKoAt.png
   bio: Sarah Jewett is a Ph.D. candidate in the Department of Government at the London
@@ -22,6 +24,7 @@
     Her research focuses on the mechanisms and processes of perpetration of mass violence
     and what we can learn about these through international criminal justice.
   website: https://www.linkedin.com/in/s-jewett/
+  
 - name: Alessio Scopelliti
   image: /assets/images/1zhAqs9MeL6BkIXW5czHe5R-441ghVcYh.png
   bio: Alessio is a PhD candidate in Political Science at the University of Bristol
@@ -30,6 +33,7 @@
     Right-Wing Parties, European Politics and Populism. Alessio is also a Doctoral
     Fellow at CARR.
   website: https://scholar.google.com/citations?user=91_CZ0AAAAAJ&hl=it
+  
 - name: Isabel Krakoff
   image: /assets/images/1ZY38MEuML-ohHl7uq7qZ5gowtMCe7Cw8.jpg
   bio: Isabel is a doctoral student in sociology at York University. Her current research
@@ -37,14 +41,14 @@
     a focus on the ongoing clash between the religious freedom and LGBTQ+ rights movements
     in the United States.
   website: https://www.linkedin.com/in/isabelkrakoff
+  
 - name: Alisha Kelkar
-  image:
   bio: Alisha Kelkar is an undergraduate student at the University of North Carolina
     at Chapel Hill where she is majoring in Computer Science and Psychology. Her research
     interests focus on the intersection of computer science, psychology and linguistics.
     In particular, she wants to use machine learning and NLP tools to study cognition
     and language usage.
-  website: 
+    
 - name: Alexander Wuttke
   image: /assets/images/1ig_hHPiaEvGVgUElgt0u_y_TJrnDImJt.jpg
   bio: Alexander is a Postdoctoral Research Fellow at the University of Mannheim.
@@ -52,6 +56,7 @@
     citizens. Moreover, he is engaged in disciplinary debates on transparent and inclusive
     research.
   website: www.alexander-wuttke.de
+  
 - name: Esther Gonzalez Hernando
   image: /assets/images/1sLjvleJhSO0SCwC6TU3FSRISQWDrowWv.jpg
   bio: Esther is currently pursuing a PhD in Population Health at the University of
@@ -62,7 +67,7 @@
     Policy from the University of Edinburgh and a BSc in Biotechnology from Universidad
     Politecnica of Madrid. Before beginning her PhD, she worked on public health emergency
     response for the World Health Organisation.
-  website: 
+  
 - name: Arpita Tripathi
   image: /assets/images/1-hzgC0pyuHNHGaRFwVIg3nWOGImJSYuu.jpeg
   bio: Arpita Tripathi is a first year PhD student at the School of Public Health,
@@ -72,6 +77,7 @@
     mixed, computational social science, and community-based participatory research
     methods in her work.
   website: https://www.linkedin.com/in/arpita-tripathi-b926212a/
+  
 - name: Katharina Baum
   image: /assets/images/1AnA4BI-qeHZ2eMZZJ3YR17IRrVUmR8AY.jpg
   bio: Katharina Baum is a Ph.D. student at the Weizenbaum Institute for the Networked
@@ -80,21 +86,21 @@
     media use on well-being (e.g. self-esteem) and societal outcomes (e.g., inequality
     perceptions).
   website: https://www.linkedin.com/in/katharina-baum-27a348143
+  
 - name: Nicolette Dakin
-  image:
   bio: Nicolette is PhD student in Critical Social/Personality and Environmental Psychology
     at the Graduate Center of CUNY. She also holds a Master's in Social Work from
     NYU. Her research interests are focused on the roles of ideology, social identity,
     and discourse in emergent social issues, such as climate change and political
     polarization. She is particularly interested in utilizing mixed methods approaches
     to policy-oriented research.
-  website:
+
 - name: François t'Serstevens
-  image: /assets/images/1dkSJkOp-tNrDoZbxl4WrlZsKkCM7D6gV.jpg
   bio: François t’Serstevens is a PhD candidate in the department of Data analytics
     and Digitalisation at Maastricht University. His research leverages machine learning
     to better understand and prevent the spread of fake news through social media.
   website: https://www.linkedin.com/in/fran%C3%A7ois-t-serstevens/
+  
 - name: Fabio Votta
   image: /assets/images/1lLtzPa8EZT8dYO3qYfL_ljRxi1zgfNcX.jpg
   bio: Fabio Votta is pursuing a PhD in Political Communication at the University
@@ -103,6 +109,7 @@
     and how advertisers make use of the technique. He is very enthusiastic about teaching
     statistics and computational methods, both introductory and more advanced topics.
   website: https://www.favstats.eu/
+  
 - name: Stefanie Klein
   image: /assets/images/1B73PrT7TUr9cLMTVwoUPNZHIrNN1e8mh.JPG
   bio: Stefanie Klein is a PhD student in the Everyday Media lab at the Leibniz-Institut
@@ -111,6 +118,7 @@
     and company image. She holds a B.A. and a M.A. in Social Sciences with a focus
     on empirical research from the University of Stuttgart.
   website: https://www.linkedin.com/in/stefanie-klein-2216b115b/
+  
 - name: Christina Viehmann
   image: /assets/images/1YUlRldy5k70G5i-wmXxYWUrL5kDhYbR1.jpg
   bio: Christina Viehmann is a postdoctoral researcher at the Department of Communication
@@ -118,6 +126,7 @@
     from the field of political communication, especially how media debates and discourses
     on social media drive societal polarization or contribute to establishing cohesion.
   website: https://twitter.com/CV_ChristinaVi
+  
 - name: Daniel Malmer
   image: /assets/images/1J_VMpAj8zflHqyGZmNvhcbyexjXj6JH9.jpeg
   bio: Dan Malmer is a PhD student at UNC-Chapel Hill. He studies online radicalization,
@@ -125,6 +134,7 @@
     at a number of technology startups include Netscape Communications. Dan holds
     computer science degrees from The University of Illinois and Stanford University.
   website: https://www.linkedin.com/in/danielmalmer/
+  
 - name: Lucie Wang
   image: /assets/images/10hCGQJOVQf41RFC2LowOUzJWMU68WKlr.jpeg
   bio: Lucie Wang is a master’s student in Data Science and an incoming student in
@@ -133,6 +143,7 @@
     her computational skills for Social Studies. Her research interests span digital
     sociology, media literacy, and political sociology.
   website: https://www.linkedin.com/in/lucie-wang
+  
 - name: Samar Haider
   image: /assets/images/1FqOIu2pqF0DIiapkVYfK6_S-1iRPBN0x.JPG
   bio: Samar Haider is a PhD student in the Department of Computer and Information
@@ -143,7 +154,8 @@
     he studied as a Fulbright Scholar, and his bachelor’s degree from the University
     of Engineering and Technology, Lahore, both in computer science.
   website: https://samarh.github.io/
-- name: HUICHAO HUANG
+  
+- name: Huichao Huang
   image: /assets/images/1Qd9gUTv6KidaUNkoMPnJ71PnyztYvrHK.jpg
   bio: Huichao Huang is a postgraduate student in Digital Sociology at the University
     of Edinburgh. Her research explores the effects of the Covid-19 pandemic on cultural
@@ -151,6 +163,7 @@
     time. She holds a BA in Linguistics and Literature from Zhejiang University of
     Technology.
   website: https://www.linkedin.com/in/huichao-huang-280b34228/
+  
 - name: Nouran Khallaf
   image: /assets/images/16Y9a9HcnXumPlXaOduH62xs8eyDD7Te-.jpg
   bio: Nouran Khallaf is a PhD researcher in computational linguistics at University
@@ -162,6 +175,7 @@
     of Alexandria, Egypt. Nouran is particularly interested in Arabic natural language
     processing, data mining, and software development.
   website: https://twitter.com/NouranKhallaf
+  
 - name: Sophia Knight
   image: /assets/images/1xKBcazeTYsRJxHEPcIFnJgoQP607FoNF.jpg
   bio: Sophia is the Programme Representative for MSc Digital Sociology at the University
@@ -170,6 +184,7 @@
     computational social science techniques into mixed-methods analyses of large-scale
     cultural phenomena, such as podcasting.
   website: https://sophiaaknight.github.io/
+  
 - name: Yumeng Guo
   image: /assets/images/1NUhe7-IbI4W7_YHzT4dZ2v-5Z-trRlbe.jpg
   bio: Yumeng Guo is a doctoral student at the Department of Sociological Studies,
@@ -178,6 +193,7 @@
     qualitative studies on social media, cross-platform studies, and digital methods.
     Before entering Sociology, she held both her BA and MA in journalism.
   website:
+  
 - name: Aleksander Bielinski
   image: /assets/images/1sEi1M8EEZzLL8ITzWdouvcyb9umupXH_.jpg
   bio: Aleksander Bielinski is PhD researcher at Edinburgh Napier University. In his
