Added speaker: Tapiwa Chagonda

--- a/_data/2022/jias/people.yml
+++ b/_data/2022/jias/people.yml
@@ -96,6 +96,18 @@ and beyond, as well as a sustainable future on Earth."
       image: /assets/images/jias_AdrianaMarais.jpg
       website: https://www.adrianamarais.org/about/
 
+    - name: Tapiwa Chagonda
+      image: /assets/images/jias_TapiwaChagonda.jpg
+      bio: "Tapiwa Chagonda completed his doctoral studies in 2011 which were focusing on the
+      survival strategies of workers in Harare, Zimbabwe during the 2000s – Zimbabwe’s turbulent
+      decade of hyperinflation and political crisis. In January 2013, Prof Chagonda was appointed
+      a senior lecturer in the Department of Sociology at the University of Johannesburg. In 2017,
+      he was promoted to Associate Professor. He is the Head of the Centre for Data Ethics (CDE)
+      under the Institute of Intelligent Systems (IIS) at the University of Johannesburg and is
+      also the Vice-Chair of UJ’s Senate Research Ethics Committee. Prof Tapiwa Chagonda is a
+      passionate teacher and in 2020, he was awarded the Faculty of Humanities Innovation in
+      Teaching Award."
+
 participants: 
   title: Participants
   people:
