--- a/_data/2022/helsinki/participants.yml
+++ b/_data/2022/helsinki/participants.yml
@@ -29,3 +29,6 @@
 - name: Maria Litova
   image: /assests/images/Maria_Litova.jpg
   bio: "Maria Litova is a research assistant at the Centre for Social Data Science, University of Helsinki, Finland. She got her first Master’s degree in Sociology and currently is a Master’s student at the University of Helsinki with major in Social Data Science. Maria is interested in natural language processing, machine learning, healthcare and medical data analysis, youth research and well-being issues."
+
+-name: Katri Sarkio
+bio: "Katri Sarkio is a doctoral researcher in Faculty of Educational Sciences, University of Helsinki. Her dissertation focuses on educational leadership, organizational culture, and innovative learning environments. She holds LSc in Digital Economy and MSc in Computer Science. Before, she worked inter alia in EIT Digital innovation ecosystem on educational development."
